# custom-stl-and-smart-pointer-library

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_vector.cpp
data/: benchmark_data.json
docs/: README_PLOTLY.md
docs/charts/: performance_chart.html
docs/scripts/: generate_plotly_charts.py
include/: list.h  list.hpp  map.h  map.hpp  queue.h  queue.hpp  shared_ptr.h  shared_ptr.hpp  stack.h  stack.hpp  unique_ptr.h  unique_ptr.hpp
tests/: test_list_gtest.cpp  test_map_gtest.cpp  test_queue_gtest.cpp  test_shared_ptr_gtest.cpp  test_stack_gtest.cpp  test_unique_ptr_gtest.cpp
